kubernetes-networks/canary/canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-20-1
  labels:
    app: web
spec:
  selector:
    release: 20-1
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-20-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      release: 20-1
  template:
    metadata:
      name: web
      labels:
        app: web
        release: 20-1
    spec:
      containers:
      - name: nginx
        image: mariarti/nginx:latest
        readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
        livenessProbe:
            tcpSocket:
              port: 8000
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
---
apiVersion: v1
kind: Service
metadata:
  name: web-20-2
  labels:
    app: web
spec:
  selector:
    release: 20-2
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-20-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
      release: 20-2
  template:
    metadata:
      name: web
      labels:
        app: web
        release: 20-2
    spec:
      containers:
      - name: nginx
        image: mariarti/nginx:latest
        readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
        livenessProbe:
            tcpSocket:
              port: 8000
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
